[gd_scene load_steps=9 format=3 uid="uid://oeyhw10yass5"]

[ext_resource type="Script" path="res://addons/rts_framework/scripts/managers/fog_of_war_manager.gd" id="1_vrsar"]
[ext_resource type="Shader" path="res://addons/rts_framework/features/vision/detailed_fog_of_war.gdshader" id="2_oehrr"]
[ext_resource type="PackedScene" uid="uid://clbjgy724q2si" path="res://addons/rts_framework/features/vision/DynamicCircle2D.tscn" id="2_t5hlw"]
[ext_resource type="Shader" path="res://addons/rts_framework/features/vision/fog_of_war_manager.gdshader" id="3_rx4ay"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sr23m"]
shader = ExtResource("3_rx4ay")
shader_parameter/blurr_factor = 1.0
shader_parameter/remove_alpha = false
shader_parameter/overlay = true

[sub_resource type="ViewportTexture" id="ViewportTexture_hyxgb"]
viewport_path = NodePath("CombinedViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bbtq4"]
resource_local_to_scene = true
render_priority = 2
shader = ExtResource("2_oehrr")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/texture_units_per_world_unit = 2
shader_parameter/outer_margin_for_fade_out = 2.0
shader_parameter/debug_texture_view = false
shader_parameter/world_visibility_texture = SubResource("ViewportTexture_hyxgb")

[sub_resource type="QuadMesh" id="QuadMesh_3f4cn"]
flip_faces = true
size = Vector2(2, 2)

[node name="FogOfWarManager" type="Node"]
script = ExtResource("1_vrsar")

[node name="CombinedViewport" type="SubViewport" parent="."]
disable_3d = true
size = Vector2i(200, 200)
render_target_update_mode = 4

[node name="Background" type="ColorRect" parent="CombinedViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="FogViewportContainer" type="SubViewportContainer" parent="CombinedViewport"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FogViewport" type="SubViewport" parent="CombinedViewport/FogViewportContainer"]
disable_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(200, 200)
render_target_clear_mode = 2
render_target_update_mode = 4

[node name="EditorOnlyCircle" parent="CombinedViewport" instance=ExtResource("2_t5hlw")]
position = Vector2(25, 25)
radius = 20

[node name="Revealer" type="ColorRect" parent="CombinedViewport"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlurrOverlay" type="ColorRect" parent="CombinedViewport"]
material = SubResource("ShaderMaterial_sr23m")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreenOverlay" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_bbtq4")
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_3f4cn")
